# vade-jwt-vc

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  VERSIONS.md
.cargo-husky/hooks/: pre-commit
src/: datatypes.rs  issuer.rs  lib.rs  utils.rs  vade_jwt_vc.rs
src/crypto/: crypto_utils.rs  crypto_verifier.rs  mod.rs  signing.rs
tests/: vade_jwt_vc.rs
typings/: index.d.ts  package.json  vade_jwt_vc.ts
typings/application/: datatypes.d.ts
utilities/: Cargo.toml
utilities/src/: lib.rs  test_data.rs
