[package]
name = "vade-jwt-vc"
version = "0.0.1"
authors = ["evan GmbH"]
edition = "2018"
license-file = "LICENSE.txt"
description = "plugin to issue VC with simple JWT signature based on SECP256K1 curve"
readme = "README.md"
keywords = ["vc", "zkp"]

[lib]
name = "vade_jwt_vc"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.31"
env_logger = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vade = { git = "ssh://git@git.slock.it/equs/interop/vade/vade.git", branch = "develop", version = "0.1.0" }

[dev-dependencies]
tokio = { version = "=1.7.1", features = ["macros", "rt-multi-thread"] }
