[package]
name = "vade-jwt-vc"
version = "0.0.1"
authors = ["evan GmbH"]
edition = "2018"
license-file = "LICENSE.txt"
description = "plugin to issue VC with simple JWT signature based on SECP256K1 curve"
readme = "README.md"
keywords = ["vc", "zkp"]

[lib]
name = "vade_jwt_vc"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.31"
blake2-rfc = { version = "0.2.18" }
byteorder = { version = "1.3.4" }
base64 = "0.13.0"
env_logger = "0.7.1"
futures = { version = "0.3.5" }
hex = "0.4.2"
libsecp256k1 = "0.3.5"
log = "0.4.8"
parity_scale_codec = { package ="parity-scale-codec", version = "1.3.0" }
rand = "0.7.3"
regex = { version = "1.3.7" }
reqwest = { version = "0.11.4", default-features= false, features = ["json", "default-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.53", features = ["preserve_order", "raw_value"] }
sha2 = "0.8.1"
sha3 = "0.8.2"
sp-core = { version = "2.0.0-rc4", default-features = false }
sp-runtime-interface = { version = "2.0.0-rc4", default-features = false, features = ["disable_target_static_assertions" ]}
sp-std = { version = "2.0.0-rc4", default-features = false }
sp-storage = { version = "2.0.0-rc4", default-features = false }
thiserror = { version = "1.0" }
twox-hash = { version = "1.5.0" }
uuid = { version = "0.8.1", features = ["serde", "v4", "wasm-bindgen"] }
vade = { git = "ssh://git@git.slock.it/equs/interop/vade/vade.git", branch = "develop", version = "0.1.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4.11",  default-features = false, features=["wasm-bindgen", "clock", "js-sys"] }

[dev-dependencies]
tokio = { version = "=1.7.1", features = ["macros", "rt-multi-thread"] }
