[package]
name = "vade-jwt-vc"
version = "0.1.0"
authors = ["evan GmbH"]
edition = "2018"
license-file = "LICENSE.txt"
description = "plugin to issue VC with simple JWT signature based on SECP256K1 curve"
readme = "README.md"
keywords = ["vc", "zkp"]

[lib]
name = "vade_jwt_vc"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.31"
base64 = "0.13.0"
env_logger = "0.7.1"
flate2 = "1.0.20"
futures = { version = "0.3.5" }
hex = "0.4.2"
libsecp256k1 = "0.3.5"
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.53", features = ["preserve_order", "raw_value"] }
sha2 = "0.8.1"
sha3 = "0.8.2"
vade = "0.1.0"
vade-signer = { git = "https://github.com/evannetwork/vade-signer.git", branch = "feature/add-initial-structure", version = "0.0.1" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4.11",  default-features = false, features=["wasm-bindgen", "clock", "js-sys"] }

[dev-dependencies]
tokio = { version = "1.7.1", features = ["macros", "rt-multi-thread"] }
utilities = { path = "utilities" }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]